# BotanIQ

./: .gitignore  Pipfile  README.md  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: app.py  convert_to_onnx.py  crop_guides (1).json  model.ipynb  test_convert.py  testing_lib.py  train.ipynb  utils.py
scripts/.streamlit/: secrets.toml
